<resources>
    <string name="app_name"></string>
    <string name="notice_board">Notice Board</string>
    <string name="important_links_notification">Important Links/Notifications</string>
    <string name="important_contacts">Important Contacts</string>
    <string name="login_id">Login ID :</string>
    <string name="login_password">Password :</string>
    <string name="sign_in">Sign In</string>
    <string name="technical_contacts">Technical Queries :</string>
    <string name="password_queries">Password Queries :</string>
    <string name="technical_contacts_email">support@abc.edu.pk</string>
    <string name="password_queries_email">password@abc.edu.pk</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="student_registration">Student Registration</string>
</resources>
